testsuite/poke.pkl/ne-arrays-diag-1.pk
/* { dg-do compile } */

var e = ([1,2,3]
            != [1,2,3,4]); /* { dg-error "invalid.*\n.*expected" } */
